--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="ru">
   <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8"/>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <link rel="stylesheet" href="./fonts/fonts.css">
     <link rel="stylesheet" href="./styles/global.css">
     <link rel="stylesheet" href="./styles/style.css">
@@ -26,13 +26,13 @@
           </ul>
         </div>
         <div class="header__logo">
-          <img class="header__logo-image" src="./images/logo-black.svg" alt="Черное лого шапки">
+          <img class="header__logo-image" src="./images/logo-black.svg" alt="Черное лого шапки"/>
         </div>
         <div class="address">
           <address class="header__address">
             <a class="header__link" href="#">+9 999 555 5555</a>
             <a class="header__link" href="#">info@sobaka.ge</a>
-            <a class="header__link header__links-list-item_no-bullit">наб. Принсенграхт 263-<br/>265, Амстердам</a>
+            <a class="header__link header__links-list-item_no-bullit">наб. Принсенграхт 263-<br>265, Амстердам</a>
           </address>
         </div>
       </nav>
@@ -40,101 +40,99 @@
     <main>
       <section class="cover overlay-cover">
         <div class="cover__title">
-          <h1 class="cover__title_text-one letter-spacing-extended">ОН <span class="no-letter-spacing">О</span></h1>
-          <h1 class="cover__title_text-two letter-spacing-extended">ТЕБ<span class="no-letter-spacing">Е</span></h1>
-          <h1 class="cover__title_text-three letter-spacing-extended"> <span>НАДО</span></h1>
+          <h1 class="cover__title_text-one letter-spacing-extended">ОН <span class="no-letter-spacing-one">О</span></h1>
+          <h1 class="cover__title_text-two letter-spacing-extended">ТЕБ<span class="no-letter-spacing-two">Е</span></h1>
+          <h1 class="cover__title_text-three letter-spacing-extended">Н<span class="no-letter-spacing-three">АДО</span></h1>
         </div>
         <div class="cover__description">
           <div class="cover__description-text">
             <p>Аукцион вещей, в которые никто не верил</p>
           </div>
-            <button class="bet-button">Сделать ставку</button>
+          <button class="bet-button">Сделать ставку</button>
         </div>
       </section>
       <section>
-      <div class="lots">
         <h1 class="lots__heading">Лоты</h1>
-      <div class="lots__container">
-        <ul class="lots__card-list">
-          <li class="lots__card-list-item">
-            <a href="#" class="card-link">
-              <article class="card card_type_film">
-                <h2 class="card__title">Фильм режиссёра, который бросил киношколу</h2>
-                <p class="card__text">Не просто бросил, а ушёл с первой лекции. Какой была бы ваша ставка, если бы вы не знали, что режиссёр — Пол Томас Андерсон?</p>
-              </article>
-            </a>
-          </li>
-        </ul>
-        <ul class="lots__card-list">
-          <li class="lots__card-list-item">
-            <a href="#" class="card-link">
-              <article class="card card_type_book">
-                <h2 class="card__title">Книга, где описан один скучный день из жизни рекламного агента</h2>
-                <p class="card__text-book">Объёмом почти в тысячу страниц. Иногда без знаков препинания и с переходами на древнеанглийский. В ней одновременно рассказывается о 16 июня 1904 года и об истории литературы, начиная с античных времён. И это всё накладывается на эпическую поэму Гомера. Сколько бы вы поставили на «Улисса» Джеймса Джойса?</p>
-              </article>
-            </a>
-          </li>
-        </ul>
-        <ul class="lots__card-list">
-          <li class="lots__card-list-item">
-            <a href="#" class="card-link">
-              <article class="card card_type_picture">
-                <h2 class="card__title">Картина, которую повторит даже 5-летний сын маминой подруги</h2>
-                <p class="card__text-picture">Ну действительно, там линия, тут кружочек, а здесь и вовсе что-то похожее на инфузорию-туфельку. Никаких полей, лесов, котиков... Сколько бы вы на такое поставили, если бы не знали, что это — одна из революционных работ Кандинского?</p>
-              </article>
-            </a>
-          </li>
-        </ul>
-      </div>
-      <div class="lots__look-more-link">
-      <a href="#" class="lots__look-more-link">посмотреть больше</a>
-      </div>
+        <div class="lots__container">
+          <ul class="lots__card-list">
+            <li class="lots__card-list-item">
+              <a href="#" class="card-link">
+                <article class="card card_type_film">
+                  <h2 class="card__title">Фильм режиссёра, который бросил киношколу</h2>
+                  <p class="card__text">Не просто бросил, а ушёл с первой лекции. Какой была бы ваша ставка, если бы вы не знали, что режиссёр — Пол Томас Андерсон?</p>
+                </article>
+              </a>
+            </li>
+          </ul>
+          <ul class="lots__card-list">
+            <li class="lots__card-list-item">
+              <a href="#" class="card-link">
+                <article class="card card_type_book">
+                  <h2 class="card__title">Книга, где описан один скучный день из жизни рекламного агента</h2>
+                  <p class="card__text-book">Объёмом почти в тысячу страниц. Иногда без знаков препинания и с переходами на древнеанглийский. В ней одновременно рассказывается о 16 июня 1904 года и об истории литературы, начиная с античных времён. И это всё накладывается на эпическую поэму Гомера. Сколько бы вы поставили на «Улисса» Джеймса Джойса?</p>
+                </article>
+              </a>
+            </li>
+          </ul>
+          <ul class="lots__card-list">
+            <li class="lots__card-list-item">
+              <a href="#" class="card-link">
+                <article class="card card_type_picture">
+                  <h2 class="card__title">Картина, которую повторит даже 5-летний сын маминой подруги</h2>
+                  <p class="card__text-picture">Ну действительно, там линия, тут кружочек, а здесь и вовсе что-то похожее на инфузорию-туфельку. Никаких полей, лесов, котиков... Сколько бы вы на такое поставили, если бы не знали, что это — одна из революционных работ Кандинского?</p>
+                </article>
+              </a>
+            </li>
+          </ul>
+        </div>
+        <div class="lots__look-more-link">
+          <a href="#" class="lots__look-more-link">посмотреть больше</a>
+        </div>
       </section>
       <section class="about">
-        </div>
-          <div class="about__logo">
-          <img class="about__logo-image" src="./images/logo-white.svg" alt="Белый логотип">
+        <div class="about__logo">
+          <img class="about__logo-image" src="./images/logo-white.svg" alt="Белый логотип"/>
         </div>
         <div class="about__title">
           <p>Об аукционе</p>
         </div>
         <div class="about__text">
-          <p> Здесь вы не встретите очередное пафосное собрание невероятно дорогого антиквариата. Наши лоты вообще не должны были попасть ни на один аукцион. Потому что кому нужен дневник девочки-подростка или картина, которую может нарисовать даже ребёнок? Кому нужны все эти странные вещи, созданные любителями?</p>
-           <p> Слишком сложные или, наоборот, слишком простые. Опережающие своё время. В пух и прах растерзанные критиками. Непринятые и непонятые. Когда-то они казались просто неудачными. Но,<br>несмотря</br>
-            на критику, кажущуюся простоту или сложность, сейчас без этих лотов невозможно представить современную культуру. Когда в эти вещи не верил никто, продолжали верить их создатели. И сейчас эти лоты стали культовыми. </p>
+          <p class="about__text-info-one">Здесь вы не встретите очередное пафосное собрание невероятно дорогого антиквариата. Наши лоты вообще не должны были попасть ни на один аукцион. Потому что кому нужен дневник девочки-подростка или картина, которую может нарисовать даже ребёнок? Кому нужны все эти странные вещи, созданные любителями?</p>
+          <p class="about__text-info-two">Слишком сложные или, наоборот, слишком простые. Опережающие своё время. В пух и прах растерзанные критиками. Непринятые и непонятые. Когда-то они казались просто неудачными. Но, несмотря <br> на критику, кажущуюся простоту или сложность, сейчас без этих лотов невозможно представить современную культуру. Когда в эти вещи не верил никто, продолжали верить их создатели. И сейчас эти лоты стали культовыми.</p>
         </div>
       </section>
     </main>
-      <footer class="footer">
-        <div class="address">
-          <a>+9 999 555 5555</a>
-          <p><a href="mailto:info@sobaka.ge">info@sobaka.ge</a></p>
-          <p>наб. Принсенграхт 263-<br>265, Амстердам <br></p>
-        </div>
-        <nav class="footer__menu">
-          <ul class="footer__menu-list">
-            <li class="footer__menu-list-item"><a href="#" class="footer__menu-link footer__menu-link_active">главная</a></li>
-            <li class="footer__menu-list-item"><a href="#" class="footer__menu-link">посмотреть лоты</a></li>
-            <li class="footer__menu-list-item"><a href="#" class="footer__menu-link">об аукционе</a></li>
-          </ul>
-        </nav>
-        <ul class="footer__social-list">
-          <li class="footer__social-list-item">
-            <a href="#" class="footer__social-link">
-              <img src="./images/yt.svg" alt="иконка ютуба" class="footer__social-icon">
-            </a>
-          </li>
-          <li class="footer__social-list-item">
-            <a href="#" class="footer__social-link">
-              <img src="./images/vk.svg" alt="иконка вк" class="footer__social-icon">
-            </a>
-          </li>
-          <li class="footer__social-list-item">
-            <a href="#" class="footer__social-link">
-              <img src="./images/pinterest.svg" alt="иконка пинтерест" class="footer__social-icon">
-            </a>
-          </li>
-        </ul>   
+    <footer class="footer">
+      <div class="address-footer">
+        <a class="address-footer-text">+9 999 555 5555</a>
+        <p><a class="address-footer-text" href="mailto:info@sobaka.ge">info@sobaka.ge</a></p>
+        <p class="address-footer-text">наб. Принсенграхт 263-<br>265, Амстердам</p>
+      </div>
+      <nav class="footer__menu">
+        <ul class="footer__menu-list">
+          <li class="footer__menu-list-item"><a href="#" class="footer__menu-link footer__menu-link_active">главная</a></li>
+          <li class="footer__menu-list-item"><a href="#" class="footer__menu-link">посмотреть лоты</a></li>
+          <li class="footer__menu-list-item"><a href="#" class="footer__menu-link">об аукционе</a></li>
+        </ul>
+      </nav>
+      <ul class="footer__social-list">
+        <li>
+          <a href="#" class="footer__social-link">
+            <img src="./images/yt.svg" alt="иконка ютуба" class="footer__social-icon">
+          </a>
+        </li>
+        <li>
+          <a href="#" class="footer__social-link">
+            <img src="./images/vk.svg" alt="иконка вк" class="footer__social-icon">
+          </a>
+        </li>
+        <li>
+          <a href="#" class="footer__social-link">
+            <img src="./images/pinterest.svg" alt="иконка пинтерест" class="footer__social-icon">
+          </a>
+        </li>
+      </ul>
     </footer>
   </body>
 </html>
+
