--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="ru">
   <head>
-    <meta charset="UTF-8"/>
-    <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./fonts/fonts.css">
     <link rel="stylesheet" href="./styles/global.css">
     <link rel="stylesheet" href="./styles/style.css">
@@ -25,40 +25,38 @@
             </li>
           </ul>
         </div>
-        <div class="header__logo">
+        <a class="header__logo">
           <img class="header__logo-image" src="./images/logo-black.svg" alt="Черное лого шапки"/>
-        </div>
-        <div class="address">
+        </a> 
+        <class class="address">
           <address class="header__address">
-            <a class="header__link" href="#">+9 999 555 5555</a>
-            <a class="header__link" href="#">info@sobaka.ge</a>
-            <a class="header__link header__links-list-item_no-bullit">наб. Принсенграхт 263-<br>265, Амстердам</a>
+            <a class="header__link" href="tel:+99995555555">+9 999 555 5555</a>
+            <a class="header__link" href="mailto:info@sobaka.ge">info@sobaka.ge</a>
+            <p class="header__link header__links-list-item_no-bullit">наб. Принсенграхт 263-<br>265, Амстердам</p>
           </address>
-        </div>
+        </class>
       </nav>
     </header>
     <main>
-      <section class="cover overlay-cover">
+      <section class="cover background-opacity">
         <div class="cover__title">
-          <h1 class="cover__title_text-one letter-spacing-extended">ОН <span class="no-letter-spacing-one">О</span></h1>
-          <h1 class="cover__title_text-two letter-spacing-extended">ТЕБ<span class="no-letter-spacing-two">Е</span></h1>
-          <h1 class="cover__title_text-three letter-spacing-extended">Н<span class="no-letter-spacing-three">АДО</span></h1>
+          <h1 class="cover__title_text-one letter-spacing-extended">он <span class="no-letter-spacing-one">о</span></h1>
+          <h1 class="cover__title_text-two letter-spacing-extended">теб<span class="no-letter-spacing-two">е</span></h1>
+          <h1 class="cover__title_text-three letter-spacing-extended">н<span class="no-letter-spacing-three">адо</span></h1>
         </div>
         <div class="cover__description">
-          <div class="cover__description-text">
-            <p>Аукцион вещей, в которые никто не верил</p>
-          </div>
+            <p class="cover__description-text">Аукцион вещей, в которые никто не верил</p>
           <button class="bet-button">Сделать ставку</button>
         </div>
       </section>
       <section>
-        <h1 class="lots__heading">Лоты</h1>
+        <h2 class="lots__heading">Лоты</h2>
         <div class="lots__container">
           <ul class="lots__card-list">
             <li class="lots__card-list-item">
               <a href="#" class="card-link">
-                <article class="card card_type_film">
-                  <h2 class="card__title">Фильм режиссёра, который бросил киношколу</h2>
+                <article class="card background__opacity-card card_type_film">
+                  <h3 class="card__title">Фильм режиссёра, который бросил киношколу</h3>
                   <p class="card__text">Не просто бросил, а ушёл с первой лекции. Какой была бы ваша ставка, если бы вы не знали, что режиссёр — Пол Томас Андерсон?</p>
                 </article>
               </a>
@@ -67,8 +65,8 @@
           <ul class="lots__card-list">
             <li class="lots__card-list-item">
               <a href="#" class="card-link">
-                <article class="card card_type_book">
-                  <h2 class="card__title">Книга, где описан один скучный день из жизни рекламного агента</h2>
+                <article class="card background__opacity-card card_type_book">
+                  <h3 class="card__title">Книга, где описан один скучный день из жизни рекламного агента</h3>
                   <p class="card__text-book">Объёмом почти в тысячу страниц. Иногда без знаков препинания и с переходами на древнеанглийский. В ней одновременно рассказывается о 16 июня 1904 года и об истории литературы, начиная с античных времён. И это всё накладывается на эпическую поэму Гомера. Сколько бы вы поставили на «Улисса» Джеймса Джойса?</p>
                 </article>
               </a>
@@ -77,7 +75,7 @@
           <ul class="lots__card-list">
             <li class="lots__card-list-item">
               <a href="#" class="card-link">
-                <article class="card card_type_picture">
+                <article class="card background__opacity-card card_type_picture">
                   <h2 class="card__title">Картина, которую повторит даже 5-летний сын маминой подруги</h2>
                   <p class="card__text-picture">Ну действительно, там линия, тут кружочек, а здесь и вовсе что-то похожее на инфузорию-туфельку. Никаких полей, лесов, котиков... Сколько бы вы на такое поставили, если бы не знали, что это — одна из революционных работ Кандинского?</p>
                 </article>
@@ -86,7 +84,7 @@
           </ul>
         </div>
         <div class="lots__look-more-link">
-          <a href="#" class="lots__look-more-link">посмотреть больше</a>
+          <a href="#" class="lots__more-link">посмотреть больше</a>
         </div>
       </section>
       <section class="about">
@@ -104,8 +102,8 @@
     </main>
     <footer class="footer">
       <div class="address-footer">
-        <a class="address-footer-text">+9 999 555 5555</a>
-        <p><a class="address-footer-text" href="mailto:info@sobaka.ge">info@sobaka.ge</a></p>
+        <a class="address-footer-text" href="tel:+99995555555">+9 999 555 5555</a>
+        <a class="address-footer-text" href="mailto:info@sobaka.ge">info@sobaka.ge</a>
         <p class="address-footer-text">наб. Принсенграхт 263-<br>265, Амстердам</p>
       </div>
       <nav class="footer__menu">
