--- a/index.html
+++ b/index.html
@@ -1,136 +1,125 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./fonts/fonts.css">
-    <link rel="stylesheet" href="./styles/global.css">
-    <link rel="stylesheet" href="./styles/style.css">
-    <title>Оно тебе надо — аукцион вещей, в которые никто не верил</title>
-  </head>
-  <body>
-    <header class="header">
-      <nav class="header__menu">
-        <div class="header__links-list">
-          <ul class="header__links-list-item">
-            <li class="header__links-list-item_no-bullit">
-              <a class="header__link">главная</a>
-            </li>
-            <li>
-              <a class="header__link header__link_active" href="#">посмотреть лоты</a>
-            </li>
-            <li>
-              <a class="header__link header__link_active" href="#">об аукционе</a>
-            </li>
-          </ul>
-        </div>
-        <a class="header__logo">
-          <img class="header__logo-image" src="./images/logo-black.svg" alt="Черное лого шапки"/>
-        </a> 
-        <class class="address">
-          <address class="header__address">
-            <a class="header__link" href="tel:+99995555555">+9 999 555 5555</a>
-            <a class="header__link" href="mailto:info@sobaka.ge">info@sobaka.ge</a>
-            <p class="header__link header__links-list-item_no-bullit">наб. Принсенграхт 263-<br>265, Амстердам</p>
-          </address>
-        </class>
-      </nav>
-    </header>
-    <main>
-      <section class="cover background-opacity">
-        <div class="cover__title">
-          <h1 class="cover__title_text-one letter-spacing-extended">он <span class="no-letter-spacing-one">о</span></h1>
-          <h1 class="cover__title_text-two letter-spacing-extended">теб<span class="no-letter-spacing-two">е</span></h1>
-          <h1 class="cover__title_text-three letter-spacing-extended">н<span class="no-letter-spacing-three">адо</span></h1>
-        </div>
-        <div class="cover__description">
-            <p class="cover__description-text">Аукцион вещей, в которые никто не верил</p>
-          <button class="bet-button">Сделать ставку</button>
-        </div>
-      </section>
-      <section>
-        <h2 class="lots__heading">Лоты</h2>
-        <div class="lots__container">
-          <ul class="lots__card-list">
-            <li class="lots__card-list-item">
-              <a href="#" class="card-link">
-                <article class="card background__opacity-card card_type_film">
-                  <h3 class="card__title">Фильм режиссёра, который бросил киношколу</h3>
-                  <p class="card__text">Не просто бросил, а ушёл с первой лекции. Какой была бы ваша ставка, если бы вы не знали, что режиссёр — Пол Томас Андерсон?</p>
-                </article>
-              </a>
-            </li>
-          </ul>
-          <ul class="lots__card-list">
-            <li class="lots__card-list-item">
-              <a href="#" class="card-link">
-                <article class="card background__opacity-card card_type_book">
-                  <h3 class="card__title">Книга, где описан один скучный день из жизни рекламного агента</h3>
-                  <p class="card__text-book">Объёмом почти в тысячу страниц. Иногда без знаков препинания и с переходами на древнеанглийский. В ней одновременно рассказывается о 16 июня 1904 года и об истории литературы, начиная с античных времён. И это всё накладывается на эпическую поэму Гомера. Сколько бы вы поставили на «Улисса» Джеймса Джойса?</p>
-                </article>
-              </a>
-            </li>
-          </ul>
-          <ul class="lots__card-list">
-            <li class="lots__card-list-item">
-              <a href="#" class="card-link">
-                <article class="card background__opacity-card card_type_picture">
-                  <h2 class="card__title">Картина, которую повторит даже 5-летний сын маминой подруги</h2>
-                  <p class="card__text-picture">Ну действительно, там линия, тут кружочек, а здесь и вовсе что-то похожее на инфузорию-туфельку. Никаких полей, лесов, котиков... Сколько бы вы на такое поставили, если бы не знали, что это — одна из революционных работ Кандинского?</p>
-                </article>
-              </a>
-            </li>
-          </ul>
-        </div>
-        <div class="lots__look-more-link">
-          <a href="#" class="lots__more-link">посмотреть больше</a>
-        </div>
-      </section>
-      <section class="about">
-        <div class="about__logo">
-          <img class="about__logo-image" src="./images/logo-white.svg" alt="Белый логотип"/>
-        </div>
-        <div class="about__title">
-          <p>Об аукционе</p>
-        </div>
-        <div class="about__text">
-          <p class="about__text-info-one">Здесь вы не встретите очередное пафосное собрание невероятно дорогого антиквариата. Наши лоты вообще не должны были попасть ни на один аукцион. Потому что кому нужен дневник девочки-подростка или картина, которую может нарисовать даже ребёнок? Кому нужны все эти странные вещи, созданные любителями?</p>
-          <p class="about__text-info-two">Слишком сложные или, наоборот, слишком простые. Опережающие своё время. В пух и прах растерзанные критиками. Непринятые и непонятые. Когда-то они казались просто неудачными. Но, несмотря <br> на критику, кажущуюся простоту или сложность, сейчас без этих лотов невозможно представить современную культуру. Когда в эти вещи не верил никто, продолжали верить их создатели. И сейчас эти лоты стали культовыми.</p>
-        </div>
-      </section>
-    </main>
-    <footer class="footer">
-      <div class="address-footer">
-        <a class="address-footer-text" href="tel:+99995555555">+9 999 555 5555</a>
-        <a class="address-footer-text" href="mailto:info@sobaka.ge">info@sobaka.ge</a>
-        <p class="address-footer-text">наб. Принсенграхт 263-<br>265, Амстердам</p>
-      </div>
-      <nav class="footer__menu">
-        <ul class="footer__menu-list">
-          <li class="footer__menu-list-item"><a href="#" class="footer__menu-link footer__menu-link_active">главная</a></li>
-          <li class="footer__menu-list-item"><a href="#" class="footer__menu-link">посмотреть лоты</a></li>
-          <li class="footer__menu-list-item"><a href="#" class="footer__menu-link">об аукционе</a></li>
-        </ul>
-      </nav>
-      <ul class="footer__social-list">
-        <li>
-          <a href="#" class="footer__social-link">
-            <img src="./images/yt.svg" alt="иконка ютуба" class="footer__social-icon">
-          </a>
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="./fonts/fonts.css">
+  <link rel="stylesheet" href="./styles/global.css">
+  <link rel="stylesheet" href="./styles/style.css">
+  <title>Оно тебе надо — аукцион вещей, в которые никто не верил</title>
+</head>
+<body>
+  <header class="header">
+    <nav class="header__menu">
+      <ul class="header__links-list-item header__links-list">
+        <li class="header__links-list-item_no-bullit">
+          <a class="header__link">главная</a>
         </li>
         <li>
-          <a href="#" class="footer__social-link">
-            <img src="./images/vk.svg" alt="иконка вк" class="footer__social-icon">
-          </a>
+          <a class="header__link header__link_active" href="#">посмотреть лоты</a>
         </li>
         <li>
-          <a href="#" class="footer__social-link">
-            <img src="./images/pinterest.svg" alt="иконка пинтерест" class="footer__social-icon">
-          </a>
+          <a class="header__link header__link_active" href="#">об аукционе</a>
         </li>
       </ul>
-    </footer>
-  </body>
+      <a class="header__logo">
+        <img class="header__logo-image" src="./images/logo-black.svg" alt="Черное лого шапки"/>
+      </a>
+      <address class="header__address">
+        <a class="header__link" href="tel:+99995555555">+9 999 555 5555</a>
+        <a class="header__link" href="mailto:info@sobaka.ge">info@sobaka.ge</a>
+        <p class="header__links-list-item_no-bullit">наб. Принсенграхт 263-<br>265, Амстердам</p>
+      </address>
+    </nav>
+  </header>
+  <main>
+    <section class="cover background-opacity">
+      <h1 class="cover__title">
+        <span class="cover__title_text-ono letter-spacing-extended">он <span class="no-letter-spacing-ono">о</span></span>
+        <span class="cover__title_text-tebe letter-spacing-extended">теб<span class="no-letter-spacing-tebe">е</span></span>
+        <span class="cover__title_text-nado letter-spacing-extended">н<span class="no-letter-spacing-nado">адо</span></span>
+      </h1>
+      <div class="cover__description">
+        <p class="cover__description-text">Аукцион вещей, в которые никто не верил</p>
+        <button class="bet-button">Сделать ставку</button>
+      </div>
+    </section>
+    <section>
+      <h2 class="lots__heading">Лоты</h2>
+        <ul class="lots__card-list lots__container">
+          <li class="lots__card-list-item">
+            <a href="#" class="card-link">
+              <article class="card card_type_film">
+                <h3 class="card__title">Фильм режиссёра, который бросил киношколу</h3>
+                <p class="card__text">Не просто бросил, а ушёл с первой лекции. Какой была бы ваша ставка, если бы вы не знали, что режиссёр — Пол Томас Андерсон?</p>
+              </article>
+            </a>
+          </li>
+          <li class="lots__card-list-item lots__card-list">
+            <a href="#" class="card-link">
+              <article class="card card_type_book">
+                <h3 class="card__title">Книга, где описан один скучный день из жизни рекламного агента</h3>
+                <p class="card__text-book">Объёмом почти в тысячу страниц. Иногда без знаков препинания и с переходами на древнеанглийский. В ней одновременно рассказывается о 16 июня 1904 года и об истории литературы, начиная с античных времён. И это всё накладывается на эпическую поэму Гомера. Сколько бы вы поставили на «Улисса» Джеймса Джойса?</p>
+              </article>
+            </a>
+          </li>
+          <li class="lots__card-list-item lots__card-list">
+            <a href="#" class="card-link">
+              <article class="card card_type_picture">
+                <h3 class="card__title">Картина, которую повторит даже 5-летний сын маминой подруги</h3>
+                <p class="card__text-picture">Ну действительно, там линия, тут кружочек, а здесь и вовсе что-то похожее на инфузорию-туфельку. Никаких полей, лесов, котиков... Сколько бы вы на такое поставили, если бы не знали, что это — одна из революционных работ Кандинского?</p>
+              </article>
+            </a>
+          </li>
+        </ul>
+      <div class="lots__look-more-link">
+        <a href="#" class="lots__more-link">посмотреть больше</a>
+      </div>
+    </section>
+    <section class="about">
+      <div>
+        <h2 class="about__title">Об аукционе</h2>
+      </div>
+      <div class="about__logo">
+        <img class="about__logo-image" src="./images/logo-white.svg" alt="Белый логотип"/>
+      </div>
+      <div class="about__text">
+        <p class="about__text-info">Здесь вы не встретите очередное пафосное собрание невероятно дорогого антиквариата. Наши лоты вообще не должны были попасть ни на один аукцион. Потому что кому нужен дневник девочки-подростка или картина, которую может нарисовать даже ребёнок? Кому нужны все эти странные вещи, созданные любителями?</p>
+        <p class="about__text-info">Слишком сложные или, наоборот, слишком простые. Опережающие своё время. В пух и прах растерзанные критиками. Непринятые и непонятые. Когда-то они казались просто неудачными. Но, несмотря на критику, кажущуюся простоту или сложность, сейчас без этих лотов невозможно представить современную культуру. Когда в эти вещи не верил никто, продолжали верить их создатели. И сейчас эти лоты стали культовыми.</p>
+      </div>
+    </section>
+  </main>
+  <footer class="footer">
+    <address class="header__address">
+      <a class="header__link" href="tel:+99995555555">+9 999 555 5555</a>
+      <a class="header__link" href="mailto:info@sobaka.ge">info@sobaka.ge</a>
+      <p class="header__link header__links-list-item_no-bullit">наб. Принсенграхт 263-<br>265, Амстердам</p>
+    </address>
+    <nav class="footer__menu">
+      <ul class="footer__menu-list">
+        <li class="footer__menu-list-item"><a href="#" class="footer__menu-link footer__menu-link_active">главная</a></li>
+        <li class="footer__menu-list-item"><a href="#" class="footer__menu-link">посмотреть лоты</a></li>
+        <li class="footer__menu-list-item"><a href="#" class="footer__menu-link">об аукционе</a></li>
+      </ul>
+    </nav>
+    <ul class="footer__social-list">
+      <li>
+        <a href="#" class="footer__social-link">
+          <img src="./images/yt.svg" alt="иконка ютуба" class="footer__social-icon">
+        </a>
+      </li>
+      <li>
+        <a href="#" class="footer__social-link">
+          <img src="./images/vk.svg" alt="иконка вк" class="footer__social-icon">
+        </a>
+      </li>
+      <li>
+        <a href="#" class="footer__social-link">
+          <img src="./images/pinterest.svg" alt="иконка пинтерест" class="footer__social-icon">
+        </a>
+      </li>
+    </ul>
+  </footer>
+</body>
 </html>
-
