--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
       <a class="header__logo">
         <img class="header__logo-image" src="./images/logo-black.svg" alt="Черное лого шапки"/>
       </a>
-      <address class="header__address">
-        <a class="header__link" href="tel:+99995555555">+9 999 555 5555</a>
-        <a class="header__link" href="mailto:info@sobaka.ge">info@sobaka.ge</a>
-        <p class="header__links-list-item_no-bullit">наб. Принсенграхт 263-<br>265, Амстердам</p>
+      <address class="address">
+        <a class="address__link" href="tel:+99995555555">+9 999 555 5555</a>
+        <a class="address__link" href="mailto:info@sobaka.ge">info@sobaka.ge</a>
+        <p class="address__no-bullit">наб. Принсенграхт 263-<br>265, Амстердам</p>
       </address>
     </nav>
   </header>
@@ -50,25 +50,25 @@
         <ul class="lots__card-list lots__container">
           <li class="lots__card-list-item">
             <a href="#" class="card-link">
-              <article class="card card_type_film">
+              <article class="card card_type_film background-opacity">
                 <h3 class="card__title">Фильм режиссёра, который бросил киношколу</h3>
                 <p class="card__text">Не просто бросил, а ушёл с первой лекции. Какой была бы ваша ставка, если бы вы не знали, что режиссёр — Пол Томас Андерсон?</p>
               </article>
             </a>
           </li>
-          <li class="lots__card-list-item lots__card-list">
+          <li class="lots__card-list-item">
             <a href="#" class="card-link">
-              <article class="card card_type_book">
+              <article class="card card_type_book background-opacity">
                 <h3 class="card__title">Книга, где описан один скучный день из жизни рекламного агента</h3>
-                <p class="card__text-book">Объёмом почти в тысячу страниц. Иногда без знаков препинания и с переходами на древнеанглийский. В ней одновременно рассказывается о 16 июня 1904 года и об истории литературы, начиная с античных времён. И это всё накладывается на эпическую поэму Гомера. Сколько бы вы поставили на «Улисса» Джеймса Джойса?</p>
+                <p class="card__text">Объёмом почти в тысячу страниц. Иногда без знаков препинания и с переходами на древнеанглийский. В ней одновременно рассказывается о 16 июня 1904 года и об истории литературы, начиная с античных времён. И это всё накладывается на эпическую поэму Гомера. Сколько бы вы поставили на «Улисса» Джеймса Джойса?</p>
               </article>
             </a>
           </li>
-          <li class="lots__card-list-item lots__card-list">
+          <li class="lots__card-list-item">
             <a href="#" class="card-link">
-              <article class="card card_type_picture">
+              <article class="card card_type_picture background-opacity">
                 <h3 class="card__title">Картина, которую повторит даже 5-летний сын маминой подруги</h3>
-                <p class="card__text-picture">Ну действительно, там линия, тут кружочек, а здесь и вовсе что-то похожее на инфузорию-туфельку. Никаких полей, лесов, котиков... Сколько бы вы на такое поставили, если бы не знали, что это — одна из революционных работ Кандинского?</p>
+                <p class="card__text">Ну действительно, там линия, тут кружочек, а здесь и вовсе что-то похожее на инфузорию-туфельку. Никаких полей, лесов, котиков... Сколько бы вы на такое поставили, если бы не знали, что это — одна из революционных работ Кандинского?</p>
               </article>
             </a>
           </li>
@@ -78,11 +78,13 @@
       </div>
     </section>
     <section class="about">
+      <div class="about-info">
+        <div class="about__logo">
+          <img class="about__logo-image" src="./images/logo-white.svg" alt="Белый логотип"/>
+        </div>
       <div>
         <h2 class="about__title">Об аукционе</h2>
       </div>
-      <div class="about__logo">
-        <img class="about__logo-image" src="./images/logo-white.svg" alt="Белый логотип"/>
       </div>
       <div class="about__text">
         <p class="about__text-info">Здесь вы не встретите очередное пафосное собрание невероятно дорогого антиквариата. Наши лоты вообще не должны были попасть ни на один аукцион. Потому что кому нужен дневник девочки-подростка или картина, которую может нарисовать даже ребёнок? Кому нужны все эти странные вещи, созданные любителями?</p>
@@ -91,10 +93,10 @@
     </section>
   </main>
   <footer class="footer">
-    <address class="header__address">
-      <a class="header__link" href="tel:+99995555555">+9 999 555 5555</a>
-      <a class="header__link" href="mailto:info@sobaka.ge">info@sobaka.ge</a>
-      <p class="header__link header__links-list-item_no-bullit">наб. Принсенграхт 263-<br>265, Амстердам</p>
+    <address class="address">
+      <a class="address__link" href="tel:+99995555555">+9 999 555 5555</a>
+      <a class="address__link" href="mailto:info@sobaka.ge">info@sobaka.ge</a>
+      <p class="address__no-bullit">наб. Принсенграхт 263-<br>265, Амстердам</p>
     </address>
     <nav class="footer__menu">
       <ul class="footer__menu-list">
